--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "expo": "^48.0.17",
+    "expo-constants": "~14.2.1",
+    "expo-local-authentication": "~13.3.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-paper": "^4.4.1",
