feat: home page done

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^48.0.17",
     "expo-constants": "~14.2.1",
     "expo-local-authentication": "~13.3.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-paper": "^4.4.1",
